Closed
Bug 875273
Opened 13 years ago
Closed 13 years ago
[Bluetooth] Revert patch for bug 841336
Categories
(Firefox OS Graveyard :: Bluetooth, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tzimmermann, Assigned: tzimmermann)
References
Details
Attachments
(1 file)
|
1.63 KB,
patch
|
echou
:
review+
|
Details | Diff | Splinter Review |
The patch for bug 841336 is a workaround. The real fix is in bug 830290, which is about to land. We should thus revert the patch bug 841336.
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #753229 -
Flags: review?(echou)
Comment 2•13 years ago
|
||
Comment on attachment 753229 [details] [diff] [review]
[01] Bug 875273: Re-introduce assertion in RunDBusCallback
Thanks!
Attachment #753229 -
Flags: review?(echou) → review+
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 3•13 years ago
|
||
Keywords: checkin-needed
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•