Bug 875273 - Re-introduce assertion in RunDBusCallback. r=echou

With the landing of bug 830290, no DBus callback should ever run in
the main thread. This patch therefore re-introduces the corresponding
assertion statement.